--- a/public_html/templates/default/assets/css/style.css
+++ b/public_html/templates/default/assets/css/style.css
@@ -494,29 +494,38 @@ input[type='email'] {
 .h2 {
 	font-family: Impact, sans-serif;
 	color: #277da1;
-	font-size: 24px;
-	font-weight: 500;
+	font-size: 30px;
+	font-weight: 700;
 	line-height: 36px;
 	text-transform: uppercase;
-	letter-spacing: .23px
+	letter-spacing: .09em;
+	cursor: pointer
 }
 
 @media screen and (max-width: 1024px) {
 	.h2 {
 		font-size: 20px;
-		line-height: 140%
+		line-height: 140%;
 	}
 }
 
 @media screen and (max-width: 480px) {
 	.h2 {
-		font-size: 16px
+		font-size: 16px;
+		letter-spacing: .07em;
+	}
+}
+
+@media screen and (max-width: 375px) {
+	.h2 {
+		font-size: 14px;
+		letter-spacing: normal;
 	}
 }
 
 .h1 {
 	color: #006d77;
-	font-size: 30px;
+	font-size: 32px;
 	font-weight: 700;
 	line-height: 48px;
 	text-transform: uppercase;
@@ -527,20 +536,20 @@ input[type='email'] {
 
 @media screen and (max-width: 1024px) {
 	.h1 {
-		font-size: 24px
+		font-size: 27px
 	}
 }
 
 @media screen and (max-width: 640px) {
 	.h1 {
-		font-size: 22px;
+		font-size: 25px;
 		line-height: 140%
 	}
 }
 
 @media screen and (max-width: 480px) {
 	.h1 {
-		font-size: 18px
+		font-size: 20px
 	}
 }
 
@@ -2246,7 +2255,7 @@ input[type='email'] {
 }
 
 .card-item__tabs_description {
-	padding: 28px 22px 39px
+	padding: 15px;
 }
 
 .card-item__tabs_name {
@@ -2255,7 +2264,7 @@ input[type='email'] {
 }
 
 .card-item__tabs_name span {
-	font-weight: 700
+	font-weight: 700;
 }
 
 .card-item__tabs_price {
@@ -2939,7 +2948,6 @@ input[type='email'] {
 
 @media screen and (max-width: 1150px) {
 	.slider__item-description {
-		/* background: #ffffffb3; */
 		min-width: 380px;
 		min-height: calc(50vh - 34px);
 		width: 100%;
@@ -2951,7 +2959,6 @@ input[type='email'] {
 
 @media screen and (max-width: 899px) {
 	.slider__item-description {
-		/* background: #ffffffb3; */
 		min-width: auto;
 		text-align: center;
 		padding-left: 170px;
@@ -2976,18 +2983,11 @@ input[type='email'] {
 
 @media screen and (max-width: 600px) {
 	.slider__item-description {
-		/* background: #f3f192e5; */
-		padding: 20px;
+		padding: 10px;
 		min-height: 470px;
-		margin-left: 31px
-	}
-}
-
-/* @media screen and (max-width: 560px) {
-	.slider__item-description {
 		margin-left: 0;
 	}
-} */
+}
 
 .slider__item-prev-text {
 	padding-left: 16px;
@@ -3858,35 +3858,25 @@ input[type='email'] {
 	}
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1440px) {
 	.offers__tabs_content {
-		padding-top: 40px
+		padding: 40px 25px;
 	}
 }
 
 @media screen and (max-width: 1024px) {
 	.offers__tabs_content {
-		padding-left: 49px
+		padding-left: 15px
 	}
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
 	.offers__tabs_content {
-		padding-left: 45px
+		padding-right: 55px;
 	}
 }
 
-@media screen and (max-width: 560px) {
-	.offers__tabs_content {
-		padding-left: 30px
-	}
-}
 
-@media screen and (max-width: 340px) {
-	.offers__tabs_content {
-		padding-left: 25px
-	}
-}
 
 .offers__tabs_content.active {
 	display: block
@@ -3964,7 +3954,7 @@ input[type='email'] {
 }
 
 .offers__tabs_description {
-	padding: 28px 22px 39px
+	padding: 15px;
 }
 
 .offers__tabs_name {
@@ -4135,7 +4125,7 @@ input[type='email'] {
 	justify-content: space-between;
 	height: auto;
 	margin-top: 17px;
-	margin-bottom: 105px;
+	margin-bottom: 70px;
 	padding: 0 80px;
 	width: 50%
 }
@@ -4166,13 +4156,13 @@ input[type='email'] {
 
 @media screen and (max-width: 560px) {
 	.about {
-		padding-left: 30px
+		padding-left: 17px
 	}
 }
 
-@media screen and (max-width: 340px) {
+@media screen and (max-width: 425px) {
 	.about {
-		padding-left: 25px
+		padding-left: 15px
 	}
 }
 
@@ -4663,7 +4653,13 @@ input[type='email'] {
 
 @media screen and (max-width: 560px) {
 	.news {
-		padding-left: 30px
+		padding-left: 17px
+	}
+}
+
+@media screen and (max-width: 425px) {
+	.news {
+		padding-left: 15px
 	}
 }
 
@@ -4673,7 +4669,7 @@ input[type='email'] {
 
 @media screen and (max-width: 1600px) {
 	.news__name {
-		margin-bottom: 60px
+		margin-bottom: 40px
 	}
 }
 
@@ -4685,7 +4681,7 @@ input[type='email'] {
 @media screen and (max-width: 1250px) {
 	.news__wrapper {
 		flex-direction: column;
-		margin-bottom: 40px
+		margin-bottom: 20px
 	}
 }
 
@@ -4947,7 +4943,7 @@ input[type='email'] {
 	}
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1100px) {
 	.card-main__wrapper {
 		grid-template-columns: 120px calc(100% - 135px)
 	}
@@ -5119,7 +5115,7 @@ input[type='email'] {
 	}
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1100px) {
 	.card-main-info {
 		grid-column: 1/3
 	}
@@ -5150,14 +5146,10 @@ input[type='email'] {
 .card-main-info-price {
 	padding-left: 16px;
 	display: flex;
-	margin-bottom: 14px
+	margin-bottom: 20px
 }
 
-@media screen and (max-width: 1680px) {
-	.card-main-info-price {
-		margin-bottom: 5px
-	}
-}
+
 
 @media screen and (max-width: 480px) {
 	.card-main-info-price {
@@ -5267,19 +5259,19 @@ input[type='email'] {
 	width: 50%;
 	display: flex;
 	align-items: center;
-	justify-content: flex-start;
+	justify-content: space-around;
 	color: #2D3033;
 	font-size: 16px;
 	font-weight: 600;
-	line-height: 36px;
+	line-height: 25px;
 	letter-spacing: .16px;
-	padding-left: 16px
+	padding-bottom: 5px;
 }
 
 @media screen and (max-width: 480px) {
 	.card-main-info__table-item {
 		font-size: 14px;
-		padding-left: 5px
+
 	}
 }
 
@@ -5301,69 +5293,7 @@ input[type='email'] {
 	}
 }
 
-/*.card-main-info__share {
-	display: flex;
-	align-items: center;
-	padding-left: 16px
-}
 
-@media screen and (max-width: 1680px) {
-	.card-main-info__share {
-		margin-bottom: 20px
-	}
-}
-
-@media screen and (max-width: 480px) {
-	.card-main-info__share {
-		padding-left: 0;
-		margin-bottom: 10px
-	}
-}
-
-.card-main-info__share-title {
-	color: #2D3033;
-	font-size: 16px;
-	font-weight: 700;
-	line-height: 36px;
-	letter-spacing: .16px;
-	margin-right: 20px
-}
-
-@media screen and (max-width: 480px) {
-	.card-main-info__share-title {
-		font-size: 14px
-	}
-}
-
-.card-main-info__share-links {
-	display: flex;
-	align-items: center
-}
-
-.card-main-info__share-link {
-	width: 34px;
-	height: 34px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	margin-right: 24px
-}
-
-@media screen and (max-width: 480px) {
-	.card-main-info__share-link {
-		margin-right: 10px
-	}
-}
-
-.card-main-info__share-link:last-child {
-	margin-right: 0
-}
-
-.card-main-info__share-link svg {
-	width: 100%;
-	height: 100%;
-	fill: #335252
-}*/
 
 .card-main-info__sale {
 	width: 100%;
@@ -5826,111 +5756,7 @@ input[type='email'] {
 
 
 
-/*@media screen and (max-width: 1540px) {
-	.card-tabs-item {
-		width: calc(100% / 3 - 40px)
-	}
-}
 
-@media screen and (max-width: 780px) {
-	.card-tabs-item {
-		width: calc(100% / 2 - 40px)
-	}
-}
-
-@media screen and (max-width: 640px) {
-	.card-tabs-item {
-		width: calc(100% / 2 - 15px)
-	}
-}
-
-@media screen and (max-width: 480px) {
-	.card-tabs-item {
-		width: 100%;
-		margin-bottom: 30px
-	}
-}
-
-@media screen and (max-width: 780px) {
-	.card-tabs-item:nth-child(3) {
-		margin-top: 40px
-	}
-}
-
-@media screen and (max-width: 640px) {
-	.card-tabs-item:nth-child(3) {
-		margin-top: 30px
-	}
-}
-
-@media screen and (max-width: 480px) {
-	.card-tabs-item:nth-child(3) {
-		margin: 0
-	}
-}*/
-
-/*.card-tabs-item__title {
-	color: #2D3033;
-	font-size: 24px;
-	font-weight: 700;
-	line-height: 36px;
-	text-transform: uppercase;
-	letter-spacing: .23px;
-	min-height: 72px
-}
-
-@media screen and (max-width: 1540px) {
-	.card-tabs-item__title {
-		font-size: 18px;
-		line-height: 24px;
-		min-height: 48px
-	}
-}
-
-@media screen and (max-width: 1024px) {
-	.card-tabs-item__title {
-		font-size: 16px;
-		line-height: 20px;
-		min-height: 40px
-	}
-}
-
-@media screen and (max-width: 480px) {
-	.card-tabs-item__title {
-		font-size: 14px;
-		line-height: 16px;
-		min-height: 32px
-	}
-}*/
-
-/*.card-tabs-item__description {
-	color: #000;
-	font-size: 16px;
-	font-weight: 400;
-	line-height: 24px;
-	letter-spacing: .4px;
-	margin-bottom: 60px
-}
-
-@media screen and (max-width: 1540px) {
-	.card-tabs-item__description {
-		margin-bottom: 40px
-	}
-}
-
-@media screen and (max-width: 1024px) {
-	.card-tabs-item__description {
-		font-size: 14px;
-		margin-bottom: 30px
-	}
-}
-
-@media screen and (max-width: 480px) {
-	.card-tabs-item__description {
-		font-size: 12px;
-		margin-bottom: 15px
-	}
-}*/
 
 .card-slider {
 	background: url("../img/card/card-slider.jpg") no-repeat center;
@@ -5968,7 +5794,7 @@ input[type='email'] {
 	padding-top: 82px;
 	display: flex;
 	flex-direction: column;
-	width: 100%;
+	/* width: 100%; */
 	max-width: 371px;
 	margin-right: auto
 }
@@ -5981,6 +5807,7 @@ input[type='email'] {
 
 @media screen and (max-width: 1024px) {
 	.catalog-aside {
+		width: 100%;
 		max-width: 100%
 	}
 }
@@ -6003,22 +5830,28 @@ input[type='email'] {
 
 .catalog-aside-sort-mobile__button {
 	padding-right: 40px;
-	cursor: pointer;
-	font-family: Impact, sans-serif;
-	font-weight: normal;
-	color: #277da1;
+
+}
+
+@media screen and (max-width: 768px) {
+	.catalog-aside-sort-mobile__button {
+		margin-right: 35px;
+	}
 }
 
 @media screen and (max-width: 600px) {
 	.catalog-aside-sort-mobile__button {
-		font-size: 14px;
-		padding-right: 37px
+		padding-right: 33px;
+		margin-right: 0;
 	}
 }
+
+
 
 .catalog-aside-sort-mobile__button::before {
 	content: '';
 	position: absolute;
+	font-weight: 700;
 	border-top: 3px solid #277da1;
 	border-left: 3px solid #277da1;
 	width: 12px;
@@ -6031,19 +5864,17 @@ input[type='email'] {
 
 @media screen and (max-width: 600px) {
 	.catalog-aside-sort-mobile__button::before {
-		width: 8px;
-		height: 8px;
+		width: 9px;
+		height: 9px;
 		top: 2px
 	}
 }
 
+
+
 @media screen and (max-width: 1024px) {
 	.catalog-aside-block__title {
 		padding-left: 20px;
-		cursor: pointer;
-		font-family: Impact, sans-serif;
-		font-weight: normal;
-		color: #277da1;
 	}
 
 	.catalog-aside-block__title.catalog-aside-block__title_open::before {
@@ -6059,12 +5890,11 @@ input[type='email'] {
 	}
 }
 
-@media screen and (max-width: 1024px) and (max-width: 600px) {
+/* @media screen and (max-width: 1024px) and (max-width: 600px) {
 	.catalog-aside-block__title {
-		font-size: 14px;
 		padding-right: 20px
 	}
-}
+} */
 
 @media screen and (max-width: 600px) {
 	.catalog-aside-block__title {
@@ -6072,11 +5902,14 @@ input[type='email'] {
 	}
 }
 
+
+
 .catalog-aside-block__title::before {
 	content: none;
 	position: absolute;
 	border-top: 3px solid #277da1;
 	border-left: 3px solid #277da1;
+	font-weight: 700;
 	width: 12px;
 	height: 12px;
 	transform: rotate(-135deg);
@@ -6095,8 +5928,8 @@ input[type='email'] {
 
 @media screen and (max-width: 600px) {
 	.catalog-aside-block__title::before {
-		width: 8px;
-		height: 8px;
+		width: 9px;
+		height: 9px;
 		top: 5px
 	}
 }
@@ -6104,7 +5937,8 @@ input[type='email'] {
 .catalog-aside-block__top {
 	display: flex;
 	align-items: center;
-	margin-bottom: 40px
+	margin-bottom: 40px;
+	flex-wrap: wrap;
 }
 
 @media screen and (max-width: 1024px) {
@@ -6384,25 +6218,38 @@ input[type='email'] {
 }
 
 .catalog-filter-wrap__remove {
-	font-size: 16px;
-	font-weight: 700;
+	display: block;
+	font-family: Impact, sans-serif;
+	font-size: 17px;
+	font-weight: 500;
 	line-height: 100%;
-	color: #2D3033;
-	padding-right: 42px;
-	width: -webkit-max-content;
-	width: -moz-max-content;
+	color: #5b8e7d;
 	width: max-content;
 	margin-left: auto;
-	border: none;
-	background-color: transparent;
-	display: block;
+	text-shadow: 1px 1px #fff;
+	text-decoration: none;
 	cursor: pointer;
-	letter-spacing: .16px;
-	transition: .3s
+	letter-spacing: .07em;
+	transition: .3s;
+	padding: .3em .5em;
+	border: 1px solid #aaa;
+	border-radius: 100px;
+	outline: none;
+	background: #d6dbbf no-repeat;
+	background-image: linear-gradient(to left, #aaa, #aaa), linear-gradient(to left, #feffe8, #feffe8), linear-gradient(#feffe8, #d6dbbf);
+	background-size: 1px 100%, 1px 100%, auto auto;
+	overflow: hidden;
 }
 
+
+
 .catalog-filter-wrap__remove:hover {
-	color: #D4DDE1
+	background-color: #fdfd9f;
+	color: #f38a12;
+	background-image:
+		linear-gradient(to left, #aaa, #aaa),
+		linear-gradient(to left, #feffe8, #feffe8),
+		linear-gradient(#fffce7, #fdfd9f);
 }
 
 @media screen and (max-width: 1024px) {
@@ -6413,48 +6260,7 @@ input[type='email'] {
 	}
 }
 
-@media screen and (max-width: 600px) {
-	.catalog-filter-wrap__remove {
-		font-size: 14px;
-		padding-right: 20px
-	}
-}
-
-/* .catalog-filter-wrap__remove::before {
-	content: '';
-	width: 1px;
-	height: 28px;
-	background: #D4DDE1;
-	transform: rotate(-45deg);
-	position: absolute;
-	right: 10px;
-	top: calc(50% - 12px)
-} */
-
-/* @media screen and (max-width: 600px) {
-	.catalog-filter-wrap__remove::before {
-		height: 14px;
-		top: calc(50% - 7px)
-	}
-} */
-
-/* .catalog-filter-wrap__remove::after {
-	content: '';
-	width: 1px;
-	height: 28px;
-	background: #D4DDE1;
-	transform: rotate(45deg);
-	position: absolute;
-	right: 10px;
-	top: calc(50% - 12px)
-}
-
-@media screen and (max-width: 600px) {
-	.catalog-filter-wrap__remove::after {
-		height: 14px;
-		top: calc(50% - 7px)
-	}
-} */
+/* ----------------------------------------------------------------------------------------------------------- */
 
 .catalog-section {
 	display: flex;
@@ -6491,7 +6297,7 @@ input[type='email'] {
 
 .catalog-section-top-items {
 	display: flex;
-	margin-right: 5px
+	margin-right: 5px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -6513,6 +6319,7 @@ input[type='email'] {
 	.catalog-section-top-items.is-open {
 		/* max-height: 200px */
 		min-height: 180px;
+		box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 	}
 }
 
@@ -6702,7 +6509,7 @@ input[type='email'] {
 	grid-row-gap: 18px
 }
 
-@media screen and (max-width: 1480px) {
+@media screen and (max-width: 1240px) {
 	.catalog-section-items__wrapper {
 		grid-template-columns: 1fr 1fr
 	}
@@ -6741,6 +6548,13 @@ input[type='email'] {
 @media screen and (max-width: 600px) {
 	.catalog-section-pagination__item {
 		margin-right: 16px;
+
+	}
+}
+
+@media screen and (max-width: 320px) {
+	.catalog-section-pagination__item {
+		margin-right: 12px;
 
 	}
 }
@@ -7801,53 +7615,7 @@ input[type='email'] {
 	color: #277da1;
 }
 
-.button1 {
-	display: inline-block;
-	text-shadow: 1px 1px #fff;
-	text-decoration: none;
-	color: #005f73;
-	padding: .5em 1em .5em .5em;
-	border: 1px solid #aaa;
-	border-radius: 100px;
-	outline: none;
-	background: #d6dbbf no-repeat;
-	background-image:
-		linear-gradient(to left, #aaa, #aaa),
-		linear-gradient(to left, #feffe8, #feffe8),
-		linear-gradient(#feffe8, #d6dbbf);
-	background-position: calc(100% - 2.7em) 0, calc(100% - 2.7em + 1px) 0, 0 0;
-	background-size: 1px 100%, 1px 100%, auto auto;
-	overflow: hidden;
-}
 
-.button1:after {
-	content: "\bb";
-	position: relative;
-	bottom: 0;
-	display: inline-block;
-	margin-left: 1.4em;
-	vertical-align: middle;
-	font-family: "Times", "Times New Roman", "serif", "sans-serif", "EmojiSymbols";
-	font-weight: 700;
-	font-size: 140%;
-	color: #005f73;
-	-webkit-transform: rotate(90deg);
-	transform: rotate(90deg);
-}
-
-.button1:hover {
-	background-color: #fdfd9f;
-	color: #f38a12;
-	background-image:
-		linear-gradient(to left, #aaa, #aaa),
-		linear-gradient(to left, #feffe8, #feffe8),
-		linear-gradient(#fffce7, #fdfd9f);
-}
-
-.button1:active:after {
-	bottom: -1.2em;
-	transition: .3s;
-}
 
 .button2 {
 	display: inline-block;
@@ -7867,23 +7635,14 @@ input[type='email'] {
 
 .button2:hover {
 	color: #f38a12;
-	background-image:
-		radial-gradient(1px 45% at 0% 50%, rgba(0, 0, 0, .6), transparent),
-		radial-gradient(1px 45% at 100% 50%, rgba(0, 0, 0, .6), transparent);
 }
 
 .button2:active {
 	color: blue;
-	background-image:
-		radial-gradient(45% 45% at 50% 100%, rgba(255, 255, 255, .9), rgba(255, 255, 255, 0)),
-		linear-gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .3));
-	box-shadow:
-		inset rgba(162, 95, 42, .4) 0 0 0 1px,
-		inset rgba(255, 255, 255, .9) 0 0 1px 3px;
 }
 
 .qty-items {
-	/* display: flex; */
+	display: none;
 	position: absolute;
 	top: 100%;
 	/* left: 50%; */
@@ -7892,13 +7651,12 @@ input[type='email'] {
 	background: #F0F7FA;
 	padding-top: 7px;
 	font-size: large;
-	display: none;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
 @media screen and (max-width: 1024px) {
 	.qty-items {
 		display: flex;
-		background: #fff;
 	}
 }
 
@@ -7914,6 +7672,7 @@ input[type='email'] {
 
 .qty-items.opened {
 	display: flex;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
 .pagination-current {
@@ -7924,6 +7683,7 @@ input[type='email'] {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	border: 2px solid #eed651
 }
 
 .cart-btn-wrap [data-totalQty] {
